--- a/index.html
+++ b/index.html
@@ -7,47 +7,34 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <style>
-  :root{
-    --bg:#0b0b13; --panel:#111122; --card:#151527; --stroke:#23243a;
-    --text:#eef2ff; --muted:#9aa3b2; --neon:#9f5bff; --neon2:#00b3ff;
-    --ok:#22c55e; --warn:#f59e0b; --bad:#ef4444; --chip:#151536;
-    --radius:16px; --shadow:0 10px 30px rgba(0,0,0,.35);
-  }
-  *{box-sizing:border-box} html,body{height:100%}
-  body{
-    margin:0; font-family:Inter,system-ui,Segoe UI,Arial; color:var(--text);
-    background:
-      radial-gradient(1000px 500px at -10% -20%, rgba(159,91,255,.15), transparent 60%),
-      radial-gradient(900px 600px at 110% -10%, rgba(0,179,255,.12), transparent 50%),
-      var(--bg);
-  }
+  :root{--bg:#0b0b13;--panel:#111122;--card:#151527;--stroke:#23243a;--text:#eef2ff;--muted:#9aa3b2;--neon:#9f5bff;--neon2:#00b3ff;--ok:#22c55e;--warn:#f59e0b;--bad:#ef4444;--radius:16px;--shadow:0 10px 30px rgba(0,0,0,.35)}
+  *{box-sizing:border-box}html,body{height:100%}
+  body{margin:0;font-family:Inter,system-ui,Segoe UI,Arial;color:var(--text);background:radial-gradient(1000px 500px at -10% -20%, rgba(159,91,255,.15), transparent 60%),radial-gradient(900px 600px at 110% -10%, rgba(0,179,255,.12), transparent 50%),var(--bg)}
   .wrap{max-width:1200px;margin:28px auto;padding:0 16px}
   header{display:flex;align-items:center;justify-content:space-between;margin-bottom:18px}
   .brand{display:flex;align-items:center;gap:12px}
-  .logo{width:42px;height:42px;border-radius:12px;background:conic-gradient(from 210deg at 50% 50%, var(--neon), var(--neon2), var(--neon));box-shadow:0 6px 18px rgba(159,91,255,.35), inset 0 0 12px rgba(0,0,0,.4)}
-  .brand h1{font-size:20px;margin:0;font-weight:800;letter-spacing:.2px}
-  .status-bar{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
-  .chip{background:linear-gradient(180deg, #171a2b, #0f1120);border:1px solid var(--stroke); border-radius:999px; padding:8px 12px; display:inline-flex; gap:8px; align-items:center;color:#d6dbff}
-  .chip .dot{width:8px;height:8px;border-radius:50%}.dot.ok{background:var(--ok)}.dot.warn{background:var(--warn)}.dot.bad{background:var(--bad)}
+  .logo{width:42px;height:42px;border-radius:12px;background:conic-gradient(from 210deg,var(--neon),var(--neon2),var(--neon));box-shadow:0 6px 18px rgba(159,91,255,.35), inset 0 0 12px rgba(0,0,0,.4)}
+  .brand h1{font-size:20px;margin:0;font-weight:800}
+  .status{display:flex;gap:10px;flex-wrap:wrap}
+  .chip{background:linear-gradient(180deg,#171a2b,#0f1120);border:1px solid var(--stroke);border-radius:999px;padding:8px 12px;display:inline-flex;gap:8px;align-items:center;color:#d6dbff}
   main{display:grid;gap:16px;grid-template-columns:1.2fr 1fr}
-  @media (max-width:980px){ main{grid-template-columns:1fr} }
-  .card{background:linear-gradient(180deg, #151527, #121227);border:1px solid var(--stroke); border-radius:var(--radius); padding:16px; box-shadow:var(--shadow)}
-  .card h2{margin:0 0 12px 0;font-size:15px;letter-spacing:.3px;color:#e6e9ff}
+  @media (max-width:980px){main{grid-template-columns:1fr}}
+  .card{background:linear-gradient(180deg,#151527,#121227);border:1px solid var(--stroke);border-radius:var(--radius);padding:16px;box-shadow:var(--shadow)}
+  .card h2{margin:0 0 12px 0;font-size:15px;color:#e6e9ff}
   .row{display:flex;gap:12px;flex-wrap:wrap}.col{flex:1 1 260px}
   .grid{display:grid;gap:10px;grid-template-columns:repeat(10,1fr);border-radius:14px;border:1px dashed var(--stroke);padding:10px;background:linear-gradient(180deg,#111326,#0c0f1f)}
   .ball{height:34px;border-radius:10px;border:1px solid var(--stroke);display:flex;align-items:center;justify-content:center;font-weight:800;background:linear-gradient(180deg,#0e1123,#0a0d1a);text-shadow:0 0 14px rgba(159,91,255,.35)}
-  .b-red{color:#ff7a7a}.b-black{color:#cbd5e1}
-  .b-white{color:#9f5bff;border:1px solid rgba(159,91,255,.6);box-shadow:0 0 18px rgba(159,91,255,.35), inset 0 0 10px rgba(159,91,255,.15)}
+  .b-red{color:#ff7a7a}.b-black{color:#cbd5e1}.b-white{color:#9f5bff;border:1px solid rgba(159,91,255,.6);box-shadow:0 0 18px rgba(159,91,255,.35), inset 0 0 10px rgba(159,91,255,.15)}
   .progress{height:12px;background:#0c0f1f;border:1px solid var(--stroke);border-radius:999px;overflow:hidden}
-  .progress>i{display:block;height:100%;width:0%;background:linear-gradient(90deg, var(--neon), var(--neon2));box-shadow:0 0 14px rgba(159,91,255,.45)}
+  .progress>i{display:block;height:100%;width:0%;background:linear-gradient(90deg,var(--neon),var(--neon2));box-shadow:0 0 14px rgba(159,91,255,.45)}
   .tag{font-size:12px;color:var(--muted)}
   table{width:100%;border-collapse:collapse} th,td{padding:10px;border-bottom:1px solid var(--stroke);font-size:13px} th{text-align:left;color:#b9c3ff} tr:last-child td{border-bottom:none}
   .pill{display:inline-flex;align-items:center;padding:4px 10px;border-radius:999px;background:#0e1021;border:1px solid var(--stroke);gap:6px;font-size:12px}
-  input[type="number"],input[type="text"],select,button{width:100%;padding:10px 12px;border-radius:12px;border:1px solid var(--stroke);background:#0f1226;color:#e7eaff;font:inherit}
-  button{cursor:pointer;font-weight:800;border:0; letter-spacing:.3px;background:linear-gradient(135deg, rgba(159,91,255,.95), rgba(0,179,255,.9));color:#fff; box-shadow:0 10px 30px rgba(0,179,255,.18), 0 0 0 1px rgba(255,255,255,.04) inset}
+  input[type="number"],select,button{width:100%;padding:10px 12px;border-radius:12px;border:1px solid var(--stroke);background:#0f1226;color:#e7eaff;font:inherit}
+  button{cursor:pointer;font-weight:800;border:0;background:linear-gradient(135deg,rgba(159,91,255,.95),rgba(0,179,255,.9));color:#fff;box-shadow:0 10px 30px rgba(0,179,255,.18),0 0 0 1px rgba(255,255,255,.04) inset}
   button.ghost{background:#0e1021;color:#e7eaff;border:1px solid var(--stroke);box-shadow:none}
   .kpis{display:grid;grid-template-columns:repeat(4,1fr);gap:12px}
-  @media (max-width:700px){ .kpis{grid-template-columns:repeat(2,1fr)} }
+  @media (max-width:700px){.kpis{grid-template-columns:repeat(2,1fr)}}
   .kpi{background:linear-gradient(180deg,#12132a,#0d1022);border:1px solid var(--stroke);border-radius:14px;padding:14px;box-shadow:var(--shadow)}
   .kpi .v{font-size:22px;font-weight:900}.kpi .l{font-size:12px;color:var(--muted)}
 </style>
@@ -56,8 +43,8 @@
 <div class="wrap">
   <header>
     <div class="brand"><div class="logo"></div><h1>Spectra X — Neural Trader (Classic)</h1></div>
-    <div class="status-bar">
-      <span class="chip"><span class="dot ok"></span> API: <b id="apiStatus">Online</b></span>
+    <div class="status">
+      <span class="chip">API: <b id="apiStatus">Online</b></span>
       <span class="chip">Modo: <b id="modeLabel">hybrid</b></span>
       <span class="chip">Stake: R$ <b id="stakeLabel">2.00</b></span>
       <span class="chip">Gales: <b id="galesLabel">2</b></span>
@@ -105,29 +92,8 @@
       <div class="row" style="margin-top:12px">
         <button id="save">Salvar Config</button>
         <button id="reset" class="ghost">Resetar Histórico</button>
-        <button id="demoFeed" class="ghost">Simular Rodada</button>
+        <button id="demo" class="ghost">Simular Rodada</button>
       </div>
-
-      <h2 style="margin-top:18px">Coletor BookWebLear</h2>
-      <div class="row">
-        <div class="col">
-          <label class="tag">URL da fonte</label>
-          <input id="ingUrl" type="text" placeholder="https://.../endpoint"/>
-        </div>
-        <div style="width:120px">
-          <label class="tag">Intervalo (s)</label>
-          <input id="ingInt" type="number" min="1" value="3"/>
-        </div>
-        <div style="width:150px">
-          <label class="tag">Status</label>
-          <input id="ingStatus" type="text" disabled value="desligado"/>
-        </div>
-      </div>
-      <div class="row" style="margin-top:10px">
-        <button id="ingSave">Salvar & Ligar</button>
-        <button id="ingStop" class="ghost">Desligar</button>
-      </div>
-      <div class="tag" id="ingErr" style="margin-top:6px;color:#fda4af"></div>
 
       <div style="margin-top:16px">
         <div class="pill">Sinal Ativo</div>
@@ -155,9 +121,8 @@
   const money = v => "R$ " + (v||0).toFixed(2).replace(".",",");
 
   async function j(url, opts){ const r = await fetch(url, opts); return await r.json(); }
-
   function renderBalls(arr){
-    const g = $("lastGrid"); g.innerHTML = "";
+    const g = $("lastGrid"); g.innerHTML="";
     arr.slice(-10).forEach(c=>{
       const b = document.createElement("div");
       b.className = "ball " + (c==="red"?"b-red":c==="black"?"b-black":"b-white");
@@ -165,25 +130,20 @@
       g.appendChild(b);
     });
   }
-
   function renderSignal(sig){
     if(!sig){ $("sigColor").textContent="—"; $("sigGale").textContent="—"; $("sigStatus").textContent="—"; return; }
     $("sigColor").textContent = (sig.color||"—").toUpperCase()+" | "+((sig.confidence||0)*100).toFixed(0)+"%";
     $("sigGale").textContent  = (sig.gale_step||0) + " / " + (sig.max_gales||0);
     $("sigStatus").textContent = sig.status||"—";
   }
-
   function row(op){
     const tr = document.createElement("tr");
     const t = new Date(op.created_at||Date.now()).toLocaleTimeString();
-    tr.innerHTML = `<td>${t}</td>
-      <td><span class="pill">${(op.color||"").toUpperCase()}</span></td>
-      <td>${((op.confidence||0)*100).toFixed(0)}%</td>
-      <td>${op.gale_step||0}/${op.max_gales||0}</td>
+    tr.innerHTML = `<td>${t}</td><td><span class="pill">${(op.color||"").toUpperCase()}</span></td>
+      <td>${((op.confidence||0)*100).toFixed(0)}%</td><td>${op.gale_step||0}/${op.max_gales||0}</td>
       <td>${op.result ? (op.result==="WIN"?"✅ WIN":"❌ LOSS") : "—"}</td>`;
     return tr;
   }
-
   let lastFinishedId = null;
   function maybeAppendFinished(op){
     if(!op || !op.result) return;
@@ -193,10 +153,9 @@
       lastFinishedId = id;
     }
   }
-
   async function refresh(){
     try{
-      const s = await j(`${API}/api/state`);
+      const s = await j(`/api/state`);
       $("modeLabel").textContent  = s.config.mode;
       $("stakeLabel").textContent = (s.config.stake||0).toFixed(2);
       $("galesLabel").textContent = s.config.max_gales;
@@ -207,24 +166,16 @@
       $("wrLabel").textContent  = Math.round((s.metrics.winrate||0)*100)+"%";
       renderBalls(s.history_tail||[]);
       const c10 = s.counts10||{red:0,black:0,white:0,n:1};
-      const pr = c10.red/(c10.n||1), pb = c10.black/(c10.n||1), pw = c10.white/(c10.n||1);
-      const sum = (pr+pb+pw)||1; const nr = pr/sum, nb = pb/sum, nw = pw/sum;
-      const setBar = (id,val,txt)=>{ $(id).style.width = Math.round(val*100)+"%"; $(txt).textContent = Math.round(val*100)+"%"; };
-      setBar("pRed", nr, "pRedTxt"); setBar("pBlack", nb, "pBlackTxt"); setBar("pWhite", nw, "pWhiteTxt");
+      const pr=c10.red/(c10.n||1), pb=c10.black/(c10.n||1), pw=c10.white/(c10.n||1);
+      const sum=(pr+pb+pw)||1; const nr=pr/sum, nb=pb/sum, nw=pw/sum;
+      const set=(id,v,txt)=>{ $(id).style.width = Math.round(v*100)+"%"; $(txt).textContent = Math.round(v*100)+"%"; };
+      set("pRed",nr,"pRedTxt"); set("pBlack",nb,"pBlackTxt"); set("pWhite",nw,"pWhiteTxt");
       renderSignal(s.active_signal);
       if(s.active_signal && s.active_signal.status==="finished"){ maybeAppendFinished(s.active_signal); }
-      // ingest UI
-      $("ingInt").value = s.ingest.interval;
-      $("ingStatus").value = s.ingest.enabled ? (s.ingest.ok ? "ligado ✓" : "erro") : "desligado";
-      $("ingErr").textContent = s.ingest.last_error || "";
-      $("apiStatus").textContent = "Online";
-    }catch(e){
-      $("apiStatus").textContent = "Offline";
-      console.error(e);
-    }
+      $("apiStatus").textContent="Online";
+    }catch(e){ $("apiStatus").textContent="Offline"; }
   }
-
-  async function saveConfig(){
+  async function save(){
     const body = {
       mode: $("mode").value,
       stake: parseFloat($("stake").value)||2,
@@ -233,42 +184,17 @@
       confluence_min_white: parseInt($("confWhite").value)||2,
       confidence_min: (parseInt($("confMin").value)||62)/100.0
     };
-    const r = await j(`${API}/api/config`, {method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(body)});
+    const r = await j(`/api/config`, {method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(body)});
     if(r.ok) refresh();
   }
-  async function resetAll(){
-    const r = await j(`${API}/api/reset`, {method:"POST"});
-    if(r.ok){ $("opsBody").innerHTML = ""; lastFinishedId = null; refresh(); }
-  }
+  async function resetAll(){ const r = await j(`/api/reset`, {method:"POST"}); if(r.ok){ $("opsBody").innerHTML=""; lastFinishedId=null; refresh(); } }
   async function demo(){
     const u = Math.random(); const result = (u<0.45)?"red":(u<0.90)?"black":"white";
-    await j(`${API}/api/push_round`, {method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({result})});
+    await j(`/api/push_round`, {method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({result})});
     refresh();
   }
-
-  // Ingest controls
-  async function ingestSave(){
-    const body = {
-      enabled: true,
-      url: $("ingUrl").value.trim(),
-      interval: parseInt($("ingInt").value)||3
-    };
-    const r = await j(`${API}/api/ingest/config`, {method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(body)});
-    if(r.ok){ refresh(); }
-  }
-  async function ingestStop(){
-    const r = await j(`${API}/api/ingest/config`, {method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({enabled:false})});
-    if(r.ok){ refresh(); }
-  }
-
-  $("save").onclick = saveConfig;
-  $("reset").onclick = resetAll;
-  $("demoFeed").onclick = demo;
-  $("ingSave").onclick = ingestSave;
-  $("ingStop").onclick = ingestStop;
-
-  refresh();
-  setInterval(refresh, 1000);
+  $("save").onclick = save; $("reset").onclick = resetAll; $("demo").onclick = demo;
+  refresh(); setInterval(refresh,1000);
 </script>
 </body>
 </html>
