--- a/index.html
+++ b/index.html
@@ -7,34 +7,36 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <style>
-  :root{--bg:#0b0b13;--panel:#111122;--card:#151527;--stroke:#23243a;--text:#eef2ff;--muted:#9aa3b2;--neon:#9f5bff;--neon2:#00b3ff;--ok:#22c55e;--warn:#f59e0b;--bad:#ef4444;--radius:16px;--shadow:0 10px 30px rgba(0,0,0,.35)}
+  :root{--bg:#0b0b13;--panel:#111122;--card:#151527;--stroke:#23243a;--text:#eef2ff;--muted:#9aa3b2;--neon:#9f5bff;--neon2:#00b3ff;--radius:16px;--shadow:0 10px 30px rgba(0,0,0,.35)}
   *{box-sizing:border-box}html,body{height:100%}
-  body{margin:0;font-family:Inter,system-ui,Segoe UI,Arial;color:var(--text);background:radial-gradient(1000px 500px at -10% -20%, rgba(159,91,255,.15), transparent 60%),radial-gradient(900px 600px at 110% -10%, rgba(0,179,255,.12), transparent 50%),var(--bg)}
+  body{margin:0;font-family:Inter,system-ui,Segoe UI,Arial;color:var(--text);
+    background:radial-gradient(1000px 500px at -10% -20%, rgba(159,91,255,.15), transparent 60%),
+               radial-gradient(900px 600px at 110% -10%, rgba(0,179,255,.12), transparent 50%),var(--bg)}
   .wrap{max-width:1200px;margin:28px auto;padding:0 16px}
   header{display:flex;align-items:center;justify-content:space-between;margin-bottom:18px}
   .brand{display:flex;align-items:center;gap:12px}
-  .logo{width:42px;height:42px;border-radius:12px;background:conic-gradient(from 210deg,var(--neon),var(--neon2),var(--neon));box-shadow:0 6px 18px rgba(159,91,255,.35), inset 0 0 12px rgba(0,0,0,.4)}
+  .logo{width:42px;height:42px;border-radius:12px;background:conic-gradient(from 210deg,var(--neon),var(--neon2),var(--neon))}
   .brand h1{font-size:20px;margin:0;font-weight:800}
   .status{display:flex;gap:10px;flex-wrap:wrap}
-  .chip{background:linear-gradient(180deg,#171a2b,#0f1120);border:1px solid var(--stroke);border-radius:999px;padding:8px 12px;display:inline-flex;gap:8px;align-items:center;color:#d6dbff}
+  .chip{background:#14162a;border:1px solid var(--stroke);border-radius:999px;padding:8px 12px;display:inline-flex;gap:8px;align-items:center}
   main{display:grid;gap:16px;grid-template-columns:1.2fr 1fr}
   @media (max-width:980px){main{grid-template-columns:1fr}}
   .card{background:linear-gradient(180deg,#151527,#121227);border:1px solid var(--stroke);border-radius:var(--radius);padding:16px;box-shadow:var(--shadow)}
-  .card h2{margin:0 0 12px 0;font-size:15px;color:#e6e9ff}
+  .card h2{margin:0 0 12px 0;font-size:15px}
   .row{display:flex;gap:12px;flex-wrap:wrap}.col{flex:1 1 260px}
-  .grid{display:grid;gap:10px;grid-template-columns:repeat(10,1fr);border-radius:14px;border:1px dashed var(--stroke);padding:10px;background:linear-gradient(180deg,#111326,#0c0f1f)}
-  .ball{height:34px;border-radius:10px;border:1px solid var(--stroke);display:flex;align-items:center;justify-content:center;font-weight:800;background:linear-gradient(180deg,#0e1123,#0a0d1a);text-shadow:0 0 14px rgba(159,91,255,.35)}
-  .b-red{color:#ff7a7a}.b-black{color:#cbd5e1}.b-white{color:#9f5bff;border:1px solid rgba(159,91,255,.6);box-shadow:0 0 18px rgba(159,91,255,.35), inset 0 0 10px rgba(159,91,255,.15)}
+  .grid{display:grid;gap:10px;grid-template-columns:repeat(10,1fr);border-radius:14px;border:1px dashed var(--stroke);padding:10px;background:#0d1022}
+  .ball{height:34px;border-radius:10px;border:1px solid var(--stroke);display:flex;align-items:center;justify-content:center;font-weight:800;background:#0a0d1a}
+  .b-red{color:#ff7a7a}.b-black{color:#cbd5e1}.b-white{color:#9f5bff;border:1px solid rgba(159,91,255,.6)}
   .progress{height:12px;background:#0c0f1f;border:1px solid var(--stroke);border-radius:999px;overflow:hidden}
-  .progress>i{display:block;height:100%;width:0%;background:linear-gradient(90deg,var(--neon),var(--neon2));box-shadow:0 0 14px rgba(159,91,255,.45)}
+  .progress>i{display:block;height:100%;width:0%;background:linear-gradient(90deg,var(--neon),var(--neon2))}
   .tag{font-size:12px;color:var(--muted)}
-  table{width:100%;border-collapse:collapse} th,td{padding:10px;border-bottom:1px solid var(--stroke);font-size:13px} th{text-align:left;color:#b9c3ff} tr:last-child td{border-bottom:none}
+  table{width:100%;border-collapse:collapse} th,td{padding:10px;border-bottom:1px solid var(--stroke);font-size:13px} th{text-align:left}
   .pill{display:inline-flex;align-items:center;padding:6px 14px;border-radius:999px;background:#0e1021;border:1px solid var(--stroke);gap:8px;font-weight:800}
-  button{width:100%;padding:14px 16px;border-radius:12px;border:0;cursor:pointer;font-weight:900;letter-spacing:.2px;background:linear-gradient(135deg,rgba(159,91,255,.95),rgba(0,179,255,.9));color:#fff;box-shadow:0 10px 30px rgba(0,179,255,.18),0 0 0 1px rgba(255,255,255,.04) inset}
+  button{width:100%;padding:14px 16px;border-radius:12px;border:0;cursor:pointer;font-weight:900;background:linear-gradient(135deg,rgba(159,91,255,.95),rgba(0,179,255,.9));color:#fff}
   button[disabled]{opacity:.6;cursor:not-allowed}
   .kpis{display:grid;grid-template-columns:repeat(4,1fr);gap:12px}
   @media (max-width:700px){.kpis{grid-template-columns:repeat(2,1fr)}}
-  .kpi{background:linear-gradient(180deg,#12132a,#0d1022);border:1px solid var(--stroke);border-radius:14px;padding:14px;box-shadow:var(--shadow)}
+  .kpi{background:#0e1021;border:1px solid var(--stroke);border-radius:14px;padding:14px}
   .kpi .v{font-size:22px;font-weight:900}.kpi .l{font-size:12px;color:var(--muted)}
   .bigBadge{font-size:28px}
 </style>
@@ -44,7 +46,7 @@
   <header>
     <div class="brand"><div class="logo"></div><h1>Spectra X — Neural Trader (Classic)</h1></div>
     <div class="status">
-      <span class="chip">API: <b id="apiStatus">Online</b></span>
+      <span class="chip" id="apiChip">API: <b id="apiStatus">Offline</b></span>
       <span class="chip">Stake: R$ <b id="stakeLabel">2.00</b></span>
       <span class="chip">Gales: <b id="galesLabel">2</b></span>
       <span class="chip">Winrate: <b id="wrLabel">0%</b></span>
@@ -95,35 +97,37 @@
 </div>
 
 <script>
+  // ===== Seleção da API (tecla 'A' para trocar) =====
+  const API_KEY = 'SPECTRA_API';
+  const getApiBase = () => (localStorage.getItem(API_KEY) || window.location.origin).replace(/\/+$/,'');
+  async function askApi(){ const v=prompt('URL da API (ex.: https://sniperblaze-cloud.onrender.com)', getApiBase()); if(v){ localStorage.setItem(API_KEY, v.replace(/\/+$/,'')); location.reload(); } }
+  window.addEventListener('keydown', e=>{ if(e.key.toLowerCase()==='a') askApi(); });
+  let API = getApiBase();
+  document.getElementById('apiChip').title = 'Pressione A para trocar a URL da API';
+
   const $=(id)=>document.getElementById(id);
   const money=v=>"R$ "+(v||0).toFixed(2).replace(".",",");
-
-  async function j(url,opts){const r=await fetch(url,opts);return await r.json();}
+  async function j(path,opts){ const r=await fetch(API+path,opts); return await r.json(); }
 
   function renderBalls(arr){
     const g=$("lastGrid"); g.innerHTML="";
     arr.slice(-10).forEach(c=>{
       const b=document.createElement("div");
       b.className="ball "+(c==="red"?"b-red":c==="black"?"b-black":"b-white");
-      b.textContent=c==="white"?"W":(c==="red"?"R":"B");
-      g.appendChild(b);
+      b.textContent=c==="white"?"W":(c==="red"?"R":"B"); g.appendChild(b);
     });
   }
-
-  function setEntry(color, conf, gale, maxg, status, confirmed){
+  function setEntry(color,conf,gale,maxg,status,confirmed){
     const badge=$("entryBadge");
     if(!color){ badge.textContent="—"; $("entryBar").style.width="0%"; $("entryConf").textContent="confiança: 0%"; $("confirmBtn").disabled=true; $("sigGale").textContent="—"; $("sigStatus").textContent="—"; return; }
-    const label = color.toUpperCase();
-    badge.textContent = `ENTRAR: ${label}`;
-    badge.style.borderColor = color==="white"?"#9f5bff":(color==="red"?"#ef4444":"#cbd5e1");
-    $("entryBar").style.width = Math.round(conf*100)+"%";
-    $("entryConf").textContent = "confiança: "+Math.round(conf*100)+"%";
-    $("sigGale").textContent = (gale||0)+"/"+(maxg||0);
-    $("sigStatus").textContent = confirmed ? "confirmado" : (status || "—");
-    $("confirmBtn").disabled = confirmed || status!=="running";
+    badge.textContent=`ENTRAR: ${color.toUpperCase()}`;
+    $("entryBar").style.width=Math.round(conf*100)+"%";
+    $("entryConf").textContent="confiança: "+Math.round(conf*100)+"%";
+    $("sigGale").textContent=(gale||0)+"/"+(maxg||0);
+    $("sigStatus").textContent=confirmed?"confirmado":(status||"—");
+    $("confirmBtn").disabled=confirmed||status!=="running";
     $("confirmBtn").textContent = confirmed ? "Confirmado ✓" : "Confirmar entrada (Enter)";
   }
-
   function row(op){
     const tr=document.createElement("tr");
     const t=new Date(op.created_at||Date.now()).toLocaleTimeString();
@@ -133,44 +137,32 @@
     return tr;
   }
   let lastFinishedId=null;
-  function maybeAppendFinished(op){
-    if(!op||!op.result)return;
-    const id=op.created_at;
-    if(id && id!==lastFinishedId){$("opsBody").prepend(row(op)); lastFinishedId=id;}
-  }
+  function maybeAppendFinished(op){ if(!op||!op.result)return; const id=op.created_at; if(id&&id!==lastFinishedId){$("opsBody").prepend(row(op)); lastFinishedId=id;} }
 
   async function refresh(){
+    // health primeiro (para status)
+    try{ await j(`/api/health`); $("apiStatus").textContent="Online"; }catch(e){ $("apiStatus").textContent="Offline"; return; }
     try{
       const s=await j(`/api/state`);
-      $("stakeLabel").textContent=(s.config.stake||0).toFixed(2);
-      $("galesLabel").textContent=s.config.max_gales;
-      $("sigTotal").textContent=s.metrics.total_signals||0;
-      $("wins").textContent=s.metrics.wins||0;
-      $("losses").textContent=s.metrics.losses||0;
-      $("bank").textContent=money(s.metrics.bank_result||0);
-      $("wrLabel").textContent=Math.round((s.metrics.winrate||0)*100)+"%";
+      $("stakeLabel").textContent=(s.config?.stake||2).toFixed(2);
+      $("galesLabel").textContent=s.config?.max_gales||2;
+      $("sigTotal").textContent=s.metrics?.total_signals||0;
+      $("wins").textContent=s.metrics?.wins||0;
+      $("losses").textContent=s.metrics?.losses||0;
+      $("bank").textContent=money(s.metrics?.bank_result||0);
+      $("wrLabel").textContent=Math.round((s.metrics?.winrate||0)*100)+"%";
       renderBalls(s.history_tail||[]);
-
       const a=s.active_signal;
       if(a){ setEntry(a.color,a.confidence,a.gale_step,a.max_gales,a.status,a.confirmed); if(a.status==="finished"){ maybeAppendFinished(a);} }
       else{ setEntry(null,0,0,0,"—",false); }
-
-      $("apiStatus").textContent="Online";
-    }catch(e){$("apiStatus").textContent="Offline";}
+    }catch(e){ $("apiStatus").textContent="Offline"; }
   }
 
-  async function confirmEntry(){
-    try{
-      const r=await j(`/api/confirm`,{method:"POST"});
-      if(r.ok){ refresh(); }
-    }catch(e){}
-  }
-
+  async function confirmEntry(){ try{ const r=await j(`/api/confirm`,{method:"POST"}); if(r.ok){ refresh(); } }catch(e){} }
   $("confirmBtn").onclick=confirmEntry;
-  // atalho: Enter
   window.addEventListener("keydown",e=>{ if(e.key==="Enter" && !$("confirmBtn").disabled){ confirmEntry(); } });
 
-  refresh(); setInterval(refresh,1000);
+  refresh(); setInterval(refresh,1200);
 </script>
 </body>
 </html>
